fix off by 1 layout issue

--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -628,7 +628,7 @@ $input-btn-padding-y:         0.5625rem !default;
 $input-btn-padding-x:         1rem !default;
 $input-btn-font-family:       null !default;
 $input-btn-font-size:         1.125rem !default;
-$input-btn-line-height:       1.33334 !default;
+$input-btn-line-height:       1.3333 !default;
 
 $input-btn-focus-width:       1px !default;
 $input-btn-focus-color:       $component-active-bg !default;
